# cpp-template

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci-test.yml  template-cleanup.yml
include/ExampleProject/utils/: example.hh
src/: CMakeLists.txt  main.cc
src/ExampleProject/: CMakeLists.txt
src/ExampleProject/utils/: CMakeLists.txt  example.cc
test/: CMakeLists.txt
test/ExampleProject/: CMakeLists.txt
test/ExampleProject/utils/: CMakeLists.txt  example_test.cc
